test_fm/_test53.nj
//
// left operand not boolean
//


public class Main extends Object {

  public static void main() {
    local Boolean x;
    x = 1 && false;
  }

}
